syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.ethereal.proto";
option java_outer_classname = "EtherealProto";
option objc_class_prefix = "Ep";
import "google/protobuf/empty.proto";
import "util.proto";

package ethereal;

service Gossiper {
    rpc gossip (Gossip) returns (Update) {}
    rpc update (ContextUpdate) returns (google.protobuf.Empty) {}
}

message Gossip {
    utils.Digeste context = 1;
    int32 ring = 2;
    utils.Biff have = 3;
    repeated Have haves = 4;
}

message Have {
    int32 epoch = 1;
    utils.Biff haveUnits = 2;
    utils.Biff havePreVotes = 3;
    utils.Biff haveCommits = 4;
}

message Missing {
    int32 epoch = 1;
    repeated PreUnit_s units = 2;
    repeated SignedPreVote prevotes = 3;
    repeated SignedCommit commits = 4;
    Have haves = 5;
}

message Update {
    repeated PreUnit_s missing = 1;
    repeated PreUnit_s waiting = 2;
    utils.Biff have = 3;
    repeated Missing missings = 4;
}

message ContextUpdate {
    utils.Digeste context = 1;
    int32 ring = 2;
    Update update = 3;
}

message PreVote {
    int64 unit = 1;
    utils.Digeste hash = 2;
    int32 source = 3;
}

message Commit {
    int64 unit = 1;
    utils.Digeste hash = 2;
    int32 source = 3;
}

message SignedPreVote {
    utils.Sig signature = 1;
    PreVote vote = 2;
}

message SignedCommit {
    utils.Sig signature = 1;
    Commit commit = 2;
}

message EpochProof {
    Proof msg = 1;
    int32 owner = 2;
    utils.Sig signature = 3;
}

message Proof {
    int64 encodedId = 1;
    utils.Digeste hash = 2;
}

message PreUnit_s {
    int64 id = 1;
    Crown_s crown = 2;
    bytes data = 3; 
    bytes salt = 4;
    utils.Sig signature = 5;
}

message Crown_s {
    repeated int32 heights = 1;
    utils.Digeste controlHash = 2;
}